# parse-jp-word-rs

./: .gitignore  Cargo.toml  README.md
data/: example.md  kanji.txt  tmp.txt
src/: consts.rs  errors.rs  main.rs
src/anki/: anki.rs  mod.rs
src/convert/: convert.rs  jp_announce.rs  mod.rs
src/parser/: jp_md.rs  mod.rs  parser.rs
src/utils/: mod.rs
