[package]
name = "quick-start-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genanki-rs = "0.4.0"
lindera = { version = "0.38.0", features = ["ipadic"] }
markdown = "0.3.0"
nom = "7.1.3"
thiserror = "1"
urlocator = "0.1.4"
